# hi-eva

./: .editorconfig  README.md  biome.json  index.html  package.json  pnpm-lock.yaml  release.conf.ts  test.patch  tsconfig.node.json  uno.config.ts  vite.config.ts
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: release.yml
scripts/: build-helper.ts
src/: App.vue  main.ts  router.ts  typed-router.d.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/accessibility/: Cargo.toml
src-tauri/accessibility-sys/: Cargo.toml
src-tauri/accessibility-sys/src/: lib.rs  text_marker.rs  text_marker_range.rs
src-tauri/accessibility/src/: lib.rs  text_marker.rs  text_marker_range.rs  value.rs
src-tauri/capabilities/: default.json
src-tauri/src/: app.rs  commands.rs  lib.rs  main.rs  sql.rs
src-tauri/src/core/: app.rs  autostart.rs  clipboard_listener.rs  clipboard_listener_ext.rs  common.rs  configuration.rs  configuration_ext.rs  constant.rs  global_shortcut.rs  message_ext.rs  mod.rs  mouse_listener.rs  mouse_listener_app.rs  state.rs  state_ext.rs  store_ext.rs  tray.rs  tray_ext.rs  updater.rs  updater_ext.rs  utils.rs  win.rs  win_ext.rs
src-tauri/src/plugins/: mac_win_ext.rs  mod.rs  window_ext.rs
src-tauri/src/sql/: init_20240418.sql  init_20251014.sql  init_20251120.sql  init_20251121.sql  init_20251124.sql  init_20251201.sql
src-tauri/text-selection/: Cargo.toml
src-tauri/text-selection-helper/: Cargo.toml
src-tauri/text-selection-helper/src/: main.rs  unix_impl.rs  utils.rs
src-tauri/text-selection/scripts/: call_menu.applescript  call_menu_osascript.js
src-tauri/text-selection/src/: clipboard_helper.rs  lib.rs  types.rs  unix_impl.rs  utils.rs  win_impl.rs
src/components/: AutoCompleteInput.vue  AutoResizeContainer.vue  CarbonIcon.vue  ChatWithHistory.vue  ClickToEdit.vue  CloseWindow.vue  CopyBtn.vue  DraggableArea.vue  EditableInputText.vue  Icon.vue  IconPicker.vue  Markdown.vue  ShortcutInput.vue
src/components/Chat/: Chat.vue  ChatHeader.vue  ChatInput.vue  ChatMessage.vue  ChatMessageList.vue  ChatMessages.vue  ChatRoom.vue  ChatRoot.vue  chat.ts  types.ts
src/components/settings/: AISetting.vue  AboutSetting.vue  BasicSetting.vue  CommonSetting.vue  EndpointItemSetting.vue  EndpointSetting.vue  PromptItemSetting.vue  PromptSetting.vue  ProviderItemSetting.vue  ProviderSetting.vue  SettingTitle.vue
src/composables/: index.ts  useAppBasicConfig.ts  useBasicConfig.ts  useComponentWrapper.ts  useConfig.ts  useDrawer.ts  useEndpointsConfig.ts  useI18n.ts  usePromptsConfig.ts  useWinEventListener.ts
src/database/: cache.ts  chatHistory.ts  chatHistoryMsg.ts  database.ts  endpointConfig.ts  index.ts  promptConfig.ts  selection.ts  types.ts
src/langs/en/: translation.json
src/langs/zh/: translation.json
src/logic/: builtinConfig.ts  cache.ts  commands.ts  events.ts  i18n.ts  icon.ts  modelListUtils.ts  tdesign.ts
src/logic/config/: endpoint.ts  index.ts  prompt.ts
src/pages/: chat.vue  history.vue  index.vue  main.vue  settings.vue  static.vue  statistic.vue  toolbar.vue
src/pages/components/: ChatPageHead.vue
src/pages/main/: index.vue  settings.vue  statistics.vue
src/pages/settings/: about.vue  ai.vue  common.vue  index.vue
src/styles/: index.css
src/types/: configuration.ts  endpoint.ts
src/utils/: index.ts  win.ts
