[package]
name = "hi-eva"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["accessibility", "accessibility-sys", "text-selection"]

[workspace.dependencies]
clipboard-rs = "0.2.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4.26"
env_logger = "0.11.6"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "hi_eva_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-ico", "tray-icon", "macos-private-api"] }
tauri-plugin-opener = "2"
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
clipboard-rs = { workspace = true }
text-selection = { path = "./text-selection" }
dotenv = "0.15.0"
tauri-plugin-single-instance = "2"

[target.'cfg(unix)'.dependencies]
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2" }

[features]
cargo-clippy = []
