[package]
name = "hi-eva"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["text-selection"]

[workspace.dependencies]
clipboard-rs = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
enigo = "0.3"
mouce = "0.3"
objc2-app-kit = "0.3"
anyhow = "1"
thiserror = "2"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "hi_eva_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [
  "macos-private-api",
  "image-ico",
  "tray-icon",
] }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
env_logger = { workspace = true }
clipboard-rs = { workspace = true }
text-selection = { path = "./text-selection" }
rs_utils = { git = "https://github.com/0x-jerry/rs-utils", branch = "main", package = "rs_utils" }
dotenv = "0.15"
nanoid = "0.4"
mouce = { workspace = true }
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tauri-plugin-notification = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }

[target.'cfg(unix)'.dependencies]
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2.1" }
objc2 = "0.6"
objc2-app-kit = { workspace = true }

[target.'cfg(unix)'.dependencies.tauri]
version = "2"
features = ["macos-private-api", "image-ico", "tray-icon"]


[features]
cargo-clippy = []
