[package]
name = "text-selection-helper"
version = "0.1.0"
edition = "2018"
license = "MIT / Apache-2.0"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
log = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

text-selection = { path = "../text-selection" }
