[package]
name = "text-selection"
version = "0.1.0"
edition = "2018"
license = "MIT / Apache-2.0"

[dependencies]
clipboard-rs = { workspace = true }
log = { workspace = true }
enigo = { workspace = true }
anyhow = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
  "Win32",
  "Win32_System",
  "Win32_System_Com",
  "Win32_UI",
  "Win32_UI_Accessibility",
] }

[target.'cfg(unix)'.dependencies]
osascript = "0.3.0"
objc2 = "0.6"
objc2-app-kit = { workspace = true }
objc2-application-services = "0.3"
objc2-core-foundation = "0.3"

serde = { workspace = true, features = ["derive"] }
